--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@ div.tocify {
 <p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <p>I can link to useful things like <a href="https://www.google.com/">google</a> and<a href="https://www.p8105.com/">p8105</a></p>
 <p>I can make an extra page on my site and link to that. Here is my <a href="about.html">about</a>page</p>
-<div id="here-is-td" class="section level2">
-<h2>Here is td</h2>
-<p>my cat is Ted, he would like to be on the internet <img src="picture/B9DB4E5C-2DAB-4698-958A-A2D5E23F36D8%E7%9A%84%E5%89%AF%E6%9C%AC.JPG" style="width:75%"></p>
+<div id="here-is-me" class="section level2">
+<h2>Here is me</h2>
+<p>I would like to be on the internet <img src="picture/B9DB4E5C-2DAB-4698-958A-A2D5E23F36D8%E7%9A%84%E5%89%AF%E6%9C%AC.JPG" style="width:75%"></p>
 <p>#<img src="picture/B9DB4E5C-2DAB-4698-958A-A2D5E23F36D8%E7%9A%84%E5%89%AF%E6%9C%AC.JPG" /></p>
 </div>
 </div>
