--- a/plotly.html
+++ b/plotly.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>plotly</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -349,22 +349,12 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">plotly</h1>
 
 </div>
 
 
-<div id="this-is-jeffs-awesome-website" class="section level1">
-<h1>This is Jeff’s awesome website</h1>
-<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
-<p>I can link to useful things like <a href="https://www.google.com/">google</a> and<a href="https://www.p8105.com/">p8105</a></p>
-<p>I can make an extra page on my site and link to that. Here is my <a href="about.html">about</a>page</p>
-<div id="here-is-me" class="section level2">
-<h2>Here is me</h2>
-<p>I would like to be on the internet <img src="picture/B9DB4E5C-2DAB-4698-958A-A2D5E23F36D8%E7%9A%84%E5%89%AF%E6%9C%AC.JPG" style="width:75%"></p>
-<p>#<img src="picture/B9DB4E5C-2DAB-4698-958A-A2D5E23F36D8%E7%9A%84%E5%89%AF%E6%9C%AC.JPG" /></p>
-</div>
-</div>
+<p>This page is about making some plotly examples.</p>
 
 
 
